made required changes

--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,11 @@ input:hover {
 
 .number {
   text-align: right;
-  background-color: #33855c;
+  background-color: #858694;
   color: #fff;
   font-size: large;
 }
 
 .sign {
-  background-color: #51d895;
+  background-color: #f5913e;
 }
