--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,116 @@
+/* stylelint-disable function-comma-space-after */
 body {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+  overflow-y: hidden;
+}
+
+.App {
+  display: flex;
+}
+
+.nav {
+  width: 20vw;
+  height: 100vh;
+  margin-left: 5vw;
+  order: 1;
   display: flex;
   flex-direction: column;
+  padding-top: 25vh;
+  gap: 2px;
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+  box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
+}
+
+.nav .a {
+  text-decoration: none;
+  text-align: center;
+  width: 80%;
+  height: 5vh;
+  display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #3cba9275;
+  border-radius: 0 4px;
+  color: black;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
+}
+
+.nav .a:hover {
+  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+  color: #fff;
+  width: 82%;
+}
+
+.nav .a:focus {
+  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+  color: #fff;
+  width: 82%;
+}
+
+.nav .a:active {
+  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+  color: #fff;
+  width: 82%;
+}
+
+.title {
+  width: 35vw;
+  height: 8vh;
+  color: #fff;
+  font-size: 2.5vw;
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section {
+  width: 80vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.section p {
+  text-align: center;
+  line-height: 26px;
+  width: 35vw;
 }
 
 form {
   display: flex;
   flex-direction: column;
   height: auto;
-  width: 30vw;
-  box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
+  width: 35vw;
+  border-radius: 25px;
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+  box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
 .calc-btn {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  grid-gap: 1px;
 }
 
 input {
-  height: 7vh;
+  background: none;
+  height: 9vh;
   border: none;
   padding: 8px;
   cursor: pointer;
+  font-size: large;
 }
 
 input:hover {
   filter: brightness(90%);
+  border-radius: 20px;
+  background-color: #3cba923d;
 }
 
 .zero {
@@ -38,15 +119,29 @@ input:hover {
 
 .text {
   height: 7vh;
-  background-color: #858694;
-  color: #fff;
-  font-size: large;
+  color: rgb(44, 7, 7);
+  font-size: x-large;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding-right: 6px;
+  padding: 14px;
+  border-bottom: 1px solid black;
 }
 
 .sign {
-  background-color: #f5913e;
+  color: black;
+  font-size: large;
+  font-weight: 800;
+  background-color: #3cba922d;
+}
+
+.welcome {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 35vw;
+  border-radius: 25px;
+  text-align: center;
+  font-size: medium;
+  line-height: 26px;
 }
