--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 /* stylelint-disable function-comma-space-after */
+* {
+  margin: 0;
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -8,68 +12,76 @@ body {
 
 .App {
   display: flex;
+  flex-direction: column;
+  height: auto;
+}
+
+.top {
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid #fff;
+  box-shadow: rgba(0, 0, 0, 0.19) 0 1px 2px, rgba(0, 0, 0, 0.23) 0 2px 2px;
+}
+
+.title {
+  width: 40%;
+  height: 8vh;
+  color: #fff;
+  font-size: 2.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav {
-  width: 20vw;
-  height: 100vh;
-  margin-left: 5vw;
-  order: 1;
+  width: 40%;
+  height: 8vh;
   display: flex;
-  flex-direction: column;
-  padding-top: 25vh;
+  justify-content: center;
+  align-items: center;
   gap: 2px;
-  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
-  box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
 .nav .a {
   text-decoration: none;
   text-align: center;
-  width: 80%;
-  height: 5vh;
+  width: 50%;
+  height: 6vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #3cba9275;
   border-radius: 0 4px;
-  color: black;
+  color: #fff;
   font-weight: 500;
+  font-size: large;
   transition: all 0.2s ease-in-out;
 }
 
 .nav .a:hover {
-  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
   color: #fff;
-  width: 82%;
+  border: 1px solid #fff;
 }
 
 .nav .a:focus {
-  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
   color: #fff;
-  width: 82%;
+  border: 1px solid #fff;
 }
 
 .nav .a:active {
-  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
   color: #fff;
-  width: 82%;
+  background: #fdfcfb52;
 }
 
-.title {
-  width: 35vw;
-  height: 8vh;
+hr {
   color: #fff;
-  font-size: 2.5vw;
-  border: 1px solid #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 3vh;
+  width: 1px;
 }
 
 .section {
-  width: 80vw;
-  height: 100vh;
+  width: 100vw;
+  height: 92vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -80,7 +92,7 @@ body {
 .section p {
   text-align: center;
   line-height: 26px;
-  width: 35vw;
+  width: 50vw;
 }
 
 form {
@@ -135,13 +147,35 @@ input:hover {
   background-color: #3cba922d;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .welcome {
   display: flex;
   flex-direction: column;
   height: auto;
-  width: 35vw;
+  width: 50vw;
   border-radius: 25px;
   text-align: center;
   font-size: medium;
   line-height: 26px;
+}
+
+h2 {
+  color: #19754d;
+  align-self: center;
+  width: 40vw;
+  height: 7vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+  box-shadow: rgba(0, 0, 0, 0.11) 0 10px 20px, rgba(0, 0, 0, 0.103) 0 6px 6px;
+  font-size: xx-large;
+  font-weight: 800;
+  margin-bottom: 6vh;
+  border-radius: 24px;
 }
